# AIBG_2023

./: CMakeLists.txt  README.md
cppSimulator/: CMakeLists.txt
cppSimulator/include/: board.h  minimax.h
cppSimulator/src/: board.cpp  main.cpp  minimax.cpp
pyController/: CMakeLists.txt  boardExample.json  controller.py
