cmake_minimum_required(VERSION 3.0)

project(AiGame)

######################################
# User build configuration
######################################


# =========================
# Global settings
# =========================

set(CMAKE_CXX_STANDARD 20)

######################################
# Setup target
######################################

# Subprojects
add_subdirectory(cppSimulator)